# docs

./: .confluence_hierarchy.json  .confluence_page_ids.json  .dockerignore  .env.example  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  .pre-commit-config.yaml  AGENTS.md  BGP Convergence.md  BGP Stack: VPN Overlay over Direct Connect.md  CLAUDE.md  CONFLUENCE_INTEGRATION.md  Cisco BFD Configuration Guide.md  Cisco IOS-XE to AWS TGW (Active-Passive).md  Cisco IOS-XE to AWS TGW (Transit VIF).md  DEPLOYMENT.md  Dockerfile  EIGRP Convergence.md  FortiGate to AWS TGW BGP over DX (BFD).md  OSPF Convergence.md  README.md  README_CONFLUENCE.md  SETUP_CONFLUENCE.md  ZENSICAL_MIGRATION.md  bgp_vpn_optimization.md  cisco_multihop_bfd_guide.md  confluence_poc.py  docker-compose.yml  fortigate_multihop_bfd_guide.md  hooks.py  mkdocs.yml  nginx.conf  ospf_bfd_comparison.md  publish_hierarchy.py  publish_test_batch.sh  pyproject.toml  troubleshooting_vpn_bgp_log_analysis_guide.md  zensical.toml
confluence_output/: output.html
confluence_test/: output.html
confluence_test_local/: output.html
deployment/: github-actions.md  gitlab-ci.md
docs/: checkout-standards-index.md  index.md  test.md
docs/application/: dhcp.md  dns.md  gnmi.md  http.md  index.md  netconf.md  netflow.md  ntp.md  ptp.md  radius.md  snmp.md  ssh.md  syslog.md  tacacs.md
docs/aws/: aws_direct_connect_setup.md  aws_third_party_vpn.md  bgp_stack_vpn_over_dx.md  bgp_vpn_optimization.md  fortigate_bgp_vpn_bfd.md  (+3 more)
test_diagrams/: output.html
test_simple/: output.html
tests/: test_confluence_poc.py
(+274 files in other folders)
