[project]
name = "network-resilience-library"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "zensical>=0.0.36",
]

[dependency-groups]
dev = [
    "pre-commit>=4.0",
    "atlassian-python-api>=3.41",
    "markdown>=3.5",
    "python-dotenv>=1.0",
]

[tool.ruff]
line-length = 120
